tests/fail/literal_negative_into_unsigned/test.yp
fn main() {
    u32 x = -1;
}
